--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -40,7 +40,7 @@
             <!-- Email Column -->
             <ng-container matColumnDef="type">
               <th mat-header-cell *matHeaderCellDef> Type</th>
-              <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+              <td mat-cell *matCellDef="let element"> {{(element.extra) ? element.extra.type : element.type}} </td>
             </ng-container>
 
             <!-- Username Column -->
