--- a/src/app/pages/hebergements/hebergements.component.html
+++ b/src/app/pages/hebergements/hebergements.component.html
@@ -20,7 +20,10 @@
             <!-- fullname Column -->
             <ng-container matColumnDef="logo">
               <th mat-header-cell *matHeaderCellDef> Logo</th>
-              <td mat-cell *matCellDef="let element"><img [src]="element.logo" alt="{{element.reference}}" width="80"/></td>
+              <td mat-cell *matCellDef="let element">
+                <img *ngIf="element.logo != null" [src]="element.logo" alt="{{element.reference}}" width="80"/>
+                <ngx-avatar *ngIf="element.logo == null" [name]="element.name" [round]="true" [size]="35"></ngx-avatar>
+              </td>
             </ng-container>
 
             <!-- Rôle Column -->
@@ -37,7 +40,7 @@
             <!-- Email Column -->
             <ng-container matColumnDef="type">
               <th mat-header-cell *matHeaderCellDef> Type</th>
-              <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+              <td mat-cell *matCellDef="let element"> {{(element.extra) ? element.extra.type : element.type}} </td>
             </ng-container>
 
             <!-- Username Column -->
