--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,13 +4,12 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="card-group">
-            <div class="card text-white bg-facebook py-5 d-md-down-none" style="width:44%">
+            <div class="card text-white bg-gray-100 py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
                 <div>
-                  <h2>Visit Morocco</h2>
-                  <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua.</p>-->
-                  <p>LOGO ICI !</p>
+                  <div class="mt-3 text-center">
+                    <img src="./assets/img/brand/logo.png" width="256" alt="Logo">
+                  </div>
                 </div>
               </div>
             </div>
@@ -26,16 +25,16 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-user"></i></span>
                     </div>
-                    <input type="text" class="form-control" formControlName="username" placeholder="Username" required
-                           [ngClass]="{'is-invalid': loginForm.controls['username'].invalid && loginForm.controls['username'].touched}">
+                    <input type="text" class="form-control" formControlName="email" placeholder="Tapez votre email ici" required
+                           [ngClass]="{'is-invalid': loginForm.controls['email'].invalid && loginForm.controls['email'].touched}">
 
                     <div class="invalid-feedback"
-                         *ngIf="loginForm.controls['username'].invalid && loginForm.controls['username'].touched">
-                      <p *ngIf="loginForm.controls['username'].hasError('required')">
+                         *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
+                      <p *ngIf="loginForm.controls['email'].hasError('required')">
                         {{frErrSrv.setErrorMessage('required')}}
                       </p>
-                      <p *ngIf="loginForm.controls['username'].hasError('minlength')">
-                        {{frErrSrv.setErrorMessage('minlength', 4)}}
+                      <p *ngIf="loginForm.controls['email'].hasError('email')">
+                        {{frErrSrv.setErrorMessage('email')}}
                       </p>
                     </div>
                   </div>
@@ -43,7 +42,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-lock"></i></span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Mot de passe" formControlName="password"
+                    <input type="password" class="form-control" placeholder="Tapez votre mot de passe ici" formControlName="password"
                            required
                            [ngClass]="{'is-invalid': loginForm.controls['password'].invalid && loginForm.controls['password'].touched}">
 
@@ -62,9 +61,9 @@
                     <div class="col-6">
                       <button type="button" class="btn btn-facebook px-4" (click)="login()">Se connecter</button>
                     </div>
-                    <div class="col-6 text-right">
+                    <!--<div class="col-6 text-right">
                       <button type="button" class="btn btn-link px-0">Contactez nous</button>
-                    </div>
+                    </div>-->
                   </div>
                 </form>
               </div>
