--- a/src/app/pages/restaurants/restaurants.component.html
+++ b/src/app/pages/restaurants/restaurants.component.html
@@ -22,7 +22,10 @@
             <!-- fullname Column -->
             <ng-container matColumnDef="logo">
               <th mat-header-cell *matHeaderCellDef> Logo</th>
-              <td mat-cell *matCellDef="let element"><img [src]="element.logo" alt="{{element.reference}}" width="80"/></td>
+              <td mat-cell *matCellDef="let element">
+                <img *ngIf="element.logo != null" [src]="element.logo" alt="{{element.reference}}" width="80"/>
+                <ngx-avatar *ngIf="element.logo == null" [name]="element.name" [round]="true" [size]="35"></ngx-avatar>
+              </td>
             </ng-container>
 
             <!-- Rôle Column -->
@@ -39,7 +42,7 @@
             <!-- Email Column -->
             <ng-container matColumnDef="specialite">
               <th mat-header-cell *matHeaderCellDef> Spécialité</th>
-              <td mat-cell *matCellDef="let element"> {{element.specialite}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.extra.specialite}} </td>
             </ng-container>
 
             <!-- Username Column -->
