--- a/src/app/pages/restaurants/restaurants.component.html
+++ b/src/app/pages/restaurants/restaurants.component.html
@@ -42,7 +42,7 @@
             <!-- Email Column -->
             <ng-container matColumnDef="specialite">
               <th mat-header-cell *matHeaderCellDef> Spécialité</th>
-              <td mat-cell *matCellDef="let element"> {{element.extra.specialite}} </td>
+              <td mat-cell *matCellDef="let element"> {{(element.extra) ? element.extra.specialite : 'N/A'}} </td>
             </ng-container>
 
             <!-- Username Column -->
