--- a/src/app/pages/restaurants/restau-dialog/restau-dialog.component.html
+++ b/src/app/pages/restaurants/restau-dialog/restau-dialog.component.html
@@ -42,22 +42,7 @@
         </div>
       </div>
     </div><!--/.row-->
-    <div class="form-group row">
-      <div class="form-group col-sm-8">
-        <label for="logo">Choisissez un logo</label>
-        <input type="file" class="form-control" id="logo" accept="image/x-png,image/jpeg"
-               (change)="selectLogo($event)">
-        <input type="hidden" class="form-control" formControlName="logo">
-        <div class="invalid-feedback" *ngIf="formGrp.controls['logo'].invalid && formGrp.controls['logo'].touched">
-          <p *ngIf="formGrp.controls['logo'].hasError('required')">
-            {{frErrSrv.setErrorMessage('required')}}
-          </p>
-        </div>
-      </div>
-      <div class="form-group col-sm-4" *ngIf="formGrp.controls['logo'].valid">
-        <img [src]="formGrp.controls['logo'].value" alt="logo" class="logo-preview">
-      </div>
-    </div><!--/.row-->
+    <!--/.row-->
     <div class="form-group row">
       <div class="form-group col-sm-4">
         <label for="email">Email</label>
