--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -21,16 +21,22 @@
             <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
 
-            <!-- fullname Column -->
-            <ng-container matColumnDef="fullname">
-              <th mat-header-cell *matHeaderCellDef> Nom complet</th>
-              <td mat-cell *matCellDef="let element"> {{element.firstname + ' ' + element.lastname}} </td>
+            <!-- firstname Column -->
+            <ng-container matColumnDef="firstname">
+              <th mat-header-cell *matHeaderCellDef> Nom</th>
+              <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
+            </ng-container>
+
+            <!-- lastname Column -->
+            <ng-container matColumnDef="lastname">
+              <th mat-header-cell *matHeaderCellDef> Prénom</th>
+              <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
             </ng-container>
 
             <!-- Rôle Column -->
             <ng-container matColumnDef="role">
               <th mat-header-cell *matHeaderCellDef> Rôle</th>
-              <td mat-cell *matCellDef="let element"> {{usersService.getRole(element.role_id, roles).libelle}} </td>
+              <td mat-cell *matCellDef="let element" class="text-capitalize"> {{element.role}} </td>
             </ng-container>
 
             <!-- Email Column -->
@@ -39,22 +45,16 @@
               <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
 
-            <!-- Username Column -->
-            <ng-container matColumnDef="username">
-              <th mat-header-cell *matHeaderCellDef> Username</th>
-              <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-            </ng-container>
-
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef> Actions</th>
               <td mat-cell *matCellDef="let element">
                 <button type="button" class="btn btn-sm btn-outline-dark"
-                        tooltip="Modifier l'utilisateur: {{element.firstname + ' ' + element.lastname}}"
+                        tooltip="Modifier l'utilisateur: {{element.first_name + ' ' + element.last_name}}"
                         (click)="editUser(element)">
                   <i class="icon-pencil"></i>
                 </button>
                 <button type="button" class="btn btn-sm btn-outline-danger"
-                        tooltip="Supprimer l'utilisateur: {{element.firstname + ' ' + element.lastname}}"
+                        tooltip="Supprimer l'utilisateur: {{element.first_name + ' ' + element.last_name}}"
                         (click)="deleteUser(element)">
                   <i class="icon-trash"></i>
                 </button>
