--- a/src/app/pages/loisir/loisir.component.html
+++ b/src/app/pages/loisir/loisir.component.html
@@ -9,7 +9,7 @@
               <i class="icon-refresh"></i>
             </button>
             <button type="button" class="btn btn-primary" tooltip="Ajouter nouveau loisir"
-                    (click)="addLoisirs()">
+                    (click)="addLoisirs()" *ngIf="authService.isAdmin(authService.getSession().role)">
               <i class="icon-plus"></i>
             </button>
           </div>
@@ -59,7 +59,7 @@
                 </button>
                 <button type="button" class="btn btn-sm btn-outline-danger"
                         tooltip="Supprimer loisir: {{element.name}}"
-                        (click)="deleteLoisir(element)">
+                        (click)="deleteLoisir(element)" *ngIf="authService.isAdmin(authService.getSession().role)">
                   <i class="icon-trash"></i>
                 </button>
               </td>
