manage error messages

--- a/src/app/pages/loisir/loisir-dialog/loisir-dialog.component.html
+++ b/src/app/pages/loisir/loisir-dialog/loisir-dialog.component.html
@@ -211,20 +211,9 @@
         <input type="file" class="form-control" id="files" multiple accept="image/x-png,image/jpeg"
                (change)="fileChange($event)">
         <input type="hidden" class="form-control" formControlName="media">
-        <div class="invalid-feedback" *ngIf="formGrp.controls['media'].invalid && formGrp.controls['media'].touched">
-           <p *ngIf="formGrp.controls['media'].hasError('required')">
-            {{frErrSrv.setErrorMessage('required')}}
-          </p>
-          <p *ngIf="formGrp.controls['media'].hasError('img_type')">
-            {{formGrp.controls['media'].getError('img_type')}}
-          </p>
-          <p *ngIf="formGrp.controls['media'].hasError('img_size')">
-            {{formGrp.controls['media'].getError('img_size')}}
-          </p>
-          <p *ngIf="formGrp.controls['media'].hasError('img_dimentions')">
-            {{formGrp.controls['media'].getError('img_dimentions')}}
-          </p>
-        </div>
+        <span class="help-block font-weight-bold text-black-50 pt-2">
+          {{media.length==1?media.length+' sélectionne':media.length+' sélectionnes'}} !
+        </span>
       </div>
       <div class="form-group col-sm-9" *ngIf="media.length>0">
         <div class="row">
