--- a/src/app/pages/restaurants/restau-dialog/restau-dialog.component.html
+++ b/src/app/pages/restaurants/restau-dialog/restau-dialog.component.html
@@ -202,6 +202,7 @@
         <label for="specialite">Spécialité</label>
         <mat-select formControlName="specialite" id="specialite" multiple placeholder="Choisissez une spécialité">
           <mat-option disabled [value]="null">-- Choisissez une spécialité</mat-option>
+          <mat-option value="internationaux">Internationaux</mat-option>
           <mat-option value="marocaine">Marocaine</mat-option>
           <mat-option value="francaise">Francaise</mat-option>
           <mat-option value="italienne">Italienne</mat-option>
