--- a/src/app/pages/infos/info-dialog/info-dialog.component.html
+++ b/src/app/pages/infos/info-dialog/info-dialog.component.html
@@ -192,10 +192,11 @@
         <select class="form-control" id="type" formControlName="type"
                 [ngClass]="{'is-invalid': formGrp.controls['type'].invalid && formGrp.controls['type'].touched}">
           <option disabled [value]="null">-- Choisissez un type</option>
-          <option value="type1">type1</option>
-          <option value="type2">type2</option>
-          <option value="type3">type3</option>
-          <option value="type4">type4</option>
+          <option value="Ambassades">Ambassades</option>
+          <option value="Santé">Santé</option>
+          <option value="Numéros D'urgence">Numéros D'urgence</option>
+          <option value="Police">Police</option>
+          <option value="Autres">Autres</option>
         </select>
         <div class="invalid-feedback" *ngIf="formGrp.controls['type'].invalid && formGrp.controls['type'].touched">
           <p *ngIf="formGrp.controls['type'].hasError('required')">
