professional role has access to add endroit

--- a/src/app/pages/cultures/cultures.component.html
+++ b/src/app/pages/cultures/cultures.component.html
@@ -9,7 +9,7 @@
               <i class="icon-refresh"></i>
             </button>
             <button type="button" class="btn btn-primary" tooltip="Ajouter nouveau culture"
-                    (click)="addCultures()" *ngIf="authService.isAdmin(authService.getSession().role)">
+                    (click)="addCultures()" >
               <i class="icon-plus"></i>
             </button>
           </div>
