--- a/src/app/pages/hebergements/hebergements.component.html
+++ b/src/app/pages/hebergements/hebergements.component.html
@@ -9,7 +9,7 @@
               <i class="icon-refresh"></i>
             </button>
             <button type="button" class="btn btn-primary" tooltip="Ajouter un nouveau hébergement"
-                    (click)="addHebergements()" *ngIf="authService.isAdmin(authService.getSession().role)">
+                    (click)="addHebergements()" >
               <i class="icon-plus"></i>
             </button>
           </div>
