--- a/src/app/pages/loisir/loisir.component.html
+++ b/src/app/pages/loisir/loisir.component.html
@@ -9,7 +9,7 @@
               <i class="icon-refresh"></i>
             </button>
             <button type="button" class="btn btn-primary" tooltip="Ajouter nouveau loisir"
-                    (click)="addLoisirs()" *ngIf="authService.isAdmin(authService.getSession().role)">
+                    (click)="addLoisirs()" >
               <i class="icon-plus"></i>
             </button>
           </div>
