--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -9,7 +9,7 @@
               <i class="icon-refresh"></i>
             </button>
             <button type="button" class="btn btn-primary" tooltip="Ajouter nouveau évenement"
-                    (click)="addEvents()" *ngIf="authService.isAdmin(authService.getSession().role)">
+                    (click)="addEvents()" >
               <i class="icon-plus"></i>
             </button>
           </div>
