--- a/src/app/pages/infos/infos.component.html
+++ b/src/app/pages/infos/infos.component.html
@@ -9,7 +9,7 @@
               <i class="icon-refresh"></i>
             </button>
             <button type="button" class="btn btn-primary" tooltip="Ajouter nouveau info"
-                    (click)="addInfos()" *ngIf="authService.isAdmin(authService.getSession().role)">
+                    (click)="addInfos()" >
               <i class="icon-plus"></i>
             </button>
           </div>
