--- a/src/app/pages/restaurants/restaurants.component.html
+++ b/src/app/pages/restaurants/restaurants.component.html
@@ -9,7 +9,7 @@
               <i class="icon-refresh"></i>
             </button>
             <button type="button" class="btn btn-primary" tooltip="Ajouter un nouveau restaurant"
-                    (click)="addRestaurant()" *ngIf="authService.isAdmin(authService.getSession().role)">
+                    (click)="addRestaurant()" >
               <i class="icon-plus"></i>
             </button>
           </div>
