--- a/src/app/pages/shoppings/shoppings.component.html
+++ b/src/app/pages/shoppings/shoppings.component.html
@@ -9,7 +9,7 @@
               <i class="icon-refresh"></i>
             </button>
             <button type="button" class="btn btn-primary" tooltip="Ajouter nouveau shopping"
-                    (click)="addShoppings()" *ngIf="authService.isAdmin(authService.getSession().role)">
+                    (click)="addShoppings()" >
               <i class="icon-plus"></i>
             </button>
           </div>
